<resources>
    <string name="app_name">Ejercicio1CM_ACS</string>
    <string name="BotonContinuar">Continuar</string>
    <string name="BotonRegresar">Regresar</string>

    <string name="PickDate">Ingresa Fecha</string>
    <string name="ApretarParaContinuar">Ingresa tus datos y se calculará tu edad y signo respecto al horóscopo chino</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvApellido">Apellido</string>
    <string name="tvFecha">Fecha de nacimiento</string>
    <string name="tvNumCuenta">Numero de Cuenta</string>
    <string name="tvCorreo">Correo</string>
    <string name="tvEdad">Edad</string>
    <string name="tvHoroscopo">Horóscopo chino</string>


</resources>