<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea1"
    android:backgroundTint="#80070707"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="633dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="50dp"
        android:onClick="clickBotonContinuar"

        android:text="@string/BotonContinuar"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="7dp"
        android:text="@string/ApretarParaContinuar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:hint="@string/tvNombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/tvApellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FBF9F9"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/tvFecha"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="#FFFCFC"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <EditText
        android:id="@+id/etNumCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="28dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/tvNumCuenta"
        android:inputType="number"
        android:maxLength="9"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/tvCorreo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFF9F9"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

</androidx.constraintlayout.widget.ConstraintLayout>